--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Coded by Ninad -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -28,7 +29,11 @@
       href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <title>Singulart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
