--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap"
+      rel="stylesheet"
+    />
     <title>Singulart</title>
   </head>
   <body>
